tests/safety/reject/range_too_large.keel
def main(sys: System); Io:
    println(range(0, 9999999999))
